# Hackathon0

AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  Dashboard.tmp
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: FILE_20260404_021921_89542781_test_temp.tmp.md  FILE_20260404_195536_test_image_freshjpg.md  FILE_20260404_195536_test_invoice_freshxlsx.md  FILE_20260404_195536_test_report_freshpdf.md  FILE_20260404_195536_test_temp_freshtmp.md  FILE_20260404_200235_test_ai_employeetxt.md  FILE_20260404_200235_test_image_freshjpg.md  FILE_20260404_200235_test_invoice_freshxlsx.md  FILE_20260404_200235_test_report_freshpdf.md  FILE_20260404_200235_test_watcher_checktxt.md  FILE_20260405_055703_test_file_checktxt.md  FILE_20260405_055703_testtxt.md  FILE_20260405_055736_test_file_checktxt.md  FILE_20260405_055736_testtxt.md  FILE_test_temp.md
AI_Employee_Vault/Inbox/: EMAIL_20260405_063943_19d5c5e8e5ee79bc.md  EMAIL_20260405_064343_19d5c62359cff0a8.md  (+9 more)
ai-employee-project/: README.md  main.py  pyproject.toml
ai-employee-project/.claude/skills/file-monitor/: SKILL.md
ai-employee-project/.claude/skills/gmail-monitor/: SKILL.md
ai-employee-project/.claude/skills/process-inbox/: SKILL.md
ai-employee-project/.claude/skills/update-dashboard/: SKILL.md
ai-employee-project/.claude/skills/whatsapp-monitor/: SKILL.md
ai-employee-project/documents/: BRONZE_COMPLETE.md
ai-employee-project/helpers/: dashboard_updater.py  inbox_processor.py
ai-employee-project/watchers/: base_watcher.py  file_watcher.py  gmail_watcher.py  whatsapp_watcher.py
(+6 files in other folders)
