[project]
name = "ai-employee-bronze"
version = "0.1.0"
description = "Bronze Tier AI Employee - File & Gmail monitoring with agent skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "python-frontmatter",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
